Fix alignment mismatch of navbar and toolbar borders

--- a/src/css/components/Toolbar.scss
+++ b/src/css/components/Toolbar.scss
@@ -3,6 +3,7 @@
 .Toolbar {
   border-bottom: 1px solid color-neutral(4);
   padding: scaleGrid(2);
+  height: 57px;
 }
 
 .Toolbar-flyout {
